--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   <span class="author-block">
                     <a href="http://chaozhang.org/" target="_blank">Chao Zhang</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="https://bo-dai.github.io/" target="_blank">Bo Dai</a><sup></sup>,</span>
+                    <a href="https://bo-dai.github.io/" target="_blank">Bo Dai</a><sup></sup></span>
                     
                   </span> 
 
@@ -96,7 +96,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://arxiv.org/pdf/2402.08219.pdf" target="_blank"
+                        <a href="https://mle-dojo.github.io/MLE-Dojo-page/" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -129,7 +129,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/abs/2402.08219" target="_blank"
+                  <a href="https://mle-dojo.github.io/MLE-Dojo-page/" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
@@ -352,14 +352,7 @@ in other domains are more evenly distributed.
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@misc{sun2024bboxadapter,
-        title={BBox-Adapter: Lightweight Adapting for Black-Box Large Language Models}, 
-        author={Haotian Sun and Yuchen Zhuang and Wei Wei and Chao Zhang and Bo Dai},
-        year={2024},
-        eprint={2402.08219},
-        archivePrefix={arXiv},
-        primaryClass={cs.CL}
-  }</code></pre>
+      <pre><code></code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
