--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="https://rushi-q.github.io/jerrycool2002.github.io/" target="_blank">Rushi Qiang</a><sup>*</sup>,</span>
+                <a href="https://rushi-q.github.io/" target="_blank">Rushi Qiang</a><sup>*</sup>,</span>
                 <span class="author-block">
                   <a href="https://night-chen.github.io" target="_blank">Yuchen Zhuang</a><sup>*</sup>,</span>
                   <span class="author-block">
