--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://mle-dojo.github.io/MLE-Dojo-page/" target="_blank"
+                        <a href="https://arxiv.org/pdf/2505.07782" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
@@ -129,7 +129,7 @@
 
                 <!-- ArXiv abstract Link -->
                 <span class="link-block">
-                  <a href="https://mle-dojo.github.io/MLE-Dojo-page/" target="_blank"
+                  <a href="https://arxiv.org/abs/2505.07782" target="_blank"
                   class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                     <i class="ai ai-arxiv"></i>
