--- a/index.html
+++ b/index.html
@@ -352,7 +352,15 @@ in other domains are more evenly distributed.
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code></code></pre>
+      <pre><code>@misc{qiang2025mledojointeractiveenvironmentsempowering,
+      title={MLE-Dojo: Interactive Environments for Empowering LLM Agents in Machine Learning Engineering}, 
+      author={Rushi Qiang and Yuchen Zhuang and Yinghao Li and Dingu Sagar V K and Rongzhi Zhang and Changhao Li and Ian Shu-Hei Wong and Sherry Yang and Percy Liang and Chao Zhang and Bo Dai},
+      year={2025},
+      eprint={2505.07782},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2505.07782}, 
+}</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
